AOTMapLogger should check if pointer is in AOTMetaspace

XMLWordPrintable

    • b21
    • Verified

      A lot of tests crashes on macos-aarch64 26 (released Sep 15 2025)
      Tested JDK: 26.0+18
      Host info: "VirtualMac2,1" arm64, 8 cores, 14G, Darwin 25.0.0, macOS 26.0.1 (25A362)

      Example of tests:
      runtime/cds/CDSMapTest.java
      runtime/logging/StressAsyncUL.java

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/System/Volumes/Data/mesos/work_dir/slaves/0103b69c-746c-4fb5-bf13-94918f380124-S1643/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/f0cce4f0-9689-4d6f-9b30-e0db48d92885/runs/b921b4cf-344b-450e-a54e-49b1b3ef526c/workspace/open/src/hotspot/share/cds/aotMapLogger.cpp:239), pid=962, tid=4867
      # assert(!mapinfo->is_static()) failed: precond
      #
      # JRE version: (26.0+18) (fastdebug build )
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 26-ea+18-1867, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, bsd-aarch64)
      # Core dump will be written. Default location: core.962
      #
      #

      --------------- S U M M A R Y ------------

      Command Line: -Xlog:async:drop -Xlog:all=debug StressAsyncUL$InnerClass

      Host: "VirtualMac2,1" arm64, 8 cores, 14G, Darwin 25.0.0, macOS 26.0.1 (25A362)
      Time: Fri Oct 10 17:08:53 2025 PDT elapsed time: 0.172270 seconds (0d 0h 0m 0s)

      --------------- T H R E A D ---------------

      Current thread (0x0000000105343070): JavaThread "Unknown thread" [_thread_in_vm, id=4867, stack(0x000000016b3cc000,0x000000016b5cf000) (2060K)]

      Stack: [0x000000016b3cc000,0x000000016b5cf000], sp=0x000000016b5ce050, free space=2056k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.dylib+0x123a59c] VMError::report(outputStream*, bool)+0x1b68 (aotMapLogger.cpp:239)
      V [libjvm.dylib+0x123de98] VMError::report_and_die(int, char const*, char const*, char*, Thread*, unsigned char*, void const*, void const*, char const*, int, unsigned long)+0x55c
      V [libjvm.dylib+0x5b7f28] print_error_for_unit_test(char const*, char const*, char*)+0x0
      V [libjvm.dylib+0x241724] AOTMapLogger::runtime_log_heap_region(FileMapInfo*)+0x0
      V [libjvm.dylib+0x2412ac] AOTMapLogger::runtime_log(FileMapInfo*, FileMapInfo*)+0x2bc
      V [libjvm.dylib+0x2465cc] AOTMetaspace::post_initialize(JavaThread*)+0x50
      V [libjvm.dylib+0x11c8b00] universe_post_init()+0x67c
      V [libjvm.dylib+0x89347c] init_globals2()+0x58
      V [libjvm.dylib+0x1190e1c] Threads::create_vm(JavaVMInitArgs*, bool*)+0x3b8
      V [libjvm.dylib+0xa122d0] JNI_CreateJavaVM+0x70
      C [libjli.dylib+0xa3d0] JavaMain+0x100
      C [libjli.dylib+0xd52c] ThreadJavaMain+0xc
      C [libsystem_pthread.dylib+0x6c08] _pthread_start+0x88
      Lock stack of current Java thread (top to bottom):

            Assignee:
            Ioi Lam
            Reporter:
            Leonid Mesnik
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: