8370248: AOTMapLogger should check if pointer is in AOTMetaspace

Reviewed-by: kvn, adinn